--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -65,8 +65,21 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       uses: actions/aws/cli@master
       with:
-        args: aws > /dev/null 2>&1; sleep 20; aws ecr describe-image-scan-findings --repository-name icecream --image-id imageTag=$IMAGE_TAG |jq '.imageScanFindings.findings[] | {severity}'
+        args: aws > /dev/null 2>&1; sleep 20; aws ecr describe-image-scan-findings --repository-name icecream --image-id imageTag=$IMAGE_TAG |jq '.imageScanFindings.findings[] | {severity}'|grep 'MEDIUM\|CRITICAL' && return 0 || echo "Critical or High Vlnerabilities found! stopping deployment" && return 1
+    
+    - name: Deploy to ECS
+      id: deploy-ecs
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      uses: actions/aws/cli@master
+      with:
+        args: ecs --region us-west-1 update-service --cluster demo --service icecream --force-new-deployment
 
+      
+
+
+      #ecs --region us-west-1 update-service --cluster demo --service icecream --force-new-deployment
     # - name: Fill in the new image ID in the Amazon ECS task definition
     #   id: task-def
     #   uses: aws-actions/amazon-ecs-render-task-definition@v1
