--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -65,7 +65,7 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       uses: actions/aws/cli@master
       with:
-        args: aws > /dev/null 2>&1; sleep 20; aws ecr describe-image-scan-findings --repository-name icecream --image-id imageTag=$IMAGE_TAG |jq '.imageScanFindings.findings[] | {severity}'|grep 'MEDIUM\|CRITICAL' && return 0 || echo "Critical or High Vlnerabilities found! stopping deployment" && return 1
+        args: aws > /dev/null 2>&1; bash .github/workflows/getECRVln.sh
     
     - name: Deploy to ECS
       id: deploy-ecs
