--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -69,6 +69,7 @@ jobs:
     
     - name: Tag container as latest
       id: ecr-latest
+      env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: icecream
         IMAGE_TAG: ${{ github.sha }}
