--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -58,7 +58,7 @@ jobs:
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
     
     - name: Check image for vulnerabilities
-      id: ecr-scan
+      id: ecr-scan-vln
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
