--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -57,15 +57,15 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
     
-    - name: Check image for vulnerabilities
-      id: ecr-scan-vln
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        IMAGE_TAG: ${{ github.sha }}
-      uses: actions/aws/cli@master
-      with:
-        args: aws > /dev/null 2>&1; bash .github/workflows/getECRVln.sh $IMAGE_TAG
+    # - name: Check image for vulnerabilities
+    #   id: ecr-scan-vln
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #     IMAGE_TAG: ${{ github.sha }}
+    #   uses: actions/aws/cli@master
+    #   with:
+    #     args: aws > /dev/null 2>&1; bash .github/workflows/getECRVln.sh $IMAGE_TAG
     
     - name: Tag container as latest
       id: ecr-latest
@@ -85,23 +85,3 @@ jobs:
       uses: actions/aws/cli@master
       with:
         args: ecs --region us-west-1 update-service --cluster demo --service icecream --force-new-deployment
-
-      
-
-
-      #ecs --region us-west-1 update-service --cluster demo --service icecream --force-new-deployment
-    # - name: Fill in the new image ID in the Amazon ECS task definition
-    #   id: task-def
-    #   uses: aws-actions/amazon-ecs-render-task-definition@v1
-    #   with:
-    #     task-definition: task-definition.json
-    #     container-name: icecream
-    #     image: ${{ steps.build-image.outputs.image }}
-
-    # - name: Deploy Amazon ECS task definition
-    #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-    #   with:
-    #     task-definition: ${{ steps.task-def.outputs.task-definition }}
-    #     service: icecream
-    #     cluster: demo
-    #     wait-for-service-stability: true
