--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -57,15 +57,15 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
     
-    # - name: Check image for vulnerabilities
-    #   id: ecr-scan-vln
-    #   env:
-    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #     IMAGE_TAG: ${{ github.sha }}
-    #   uses: actions/aws/cli@master
-    #   with:
-    #     args: aws > /dev/null 2>&1; bash .github/workflows/getECRVln.sh $IMAGE_TAG
+    - name: Check image for vulnerabilities
+      id: ecr-scan-vln
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        IMAGE_TAG: ${{ github.sha }}
+      uses: actions/aws/cli@master
+      with:
+        args: aws > /dev/null 2>&1; bash .github/workflows/getECRVln.sh $IMAGE_TAG
     
     - name: Tag container as latest
       id: ecr-latest
